master/course/content/php/etc/kubernetes/manifests/gitops/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: phpinfo
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: phpinfo
